	PR middle-end/47000 	* tree-inline.c (estimate_operator_cost): Handle VIEW_CONVERT_EXPR.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@168108 138bc75d-0d04-0410-961f-82ee72b054a4